cluster-aggregator/src/section/snapshots/cluster_aggregator__section__performance__tests__kube_performance_memory_swap_v1.snap
---
source: cluster-aggregator/src/section/performance.rs
expression: "KubePerformanceMemorySwapV1::new(114_962_432)"
---
{
  "resource": {
    "type_": "memory",
    "usage": 114962432.0
  }
}
