cluster-aggregator/src/section/snapshots/cluster_aggregator__section__performance__tests__kube_performance_memory_v1.snap
---
source: cluster-aggregator/src/section/performance.rs
expression: "KubePerformanceMemoryV1::new(104_857_600)"
---
{
  "resource": {
    "type_": "memory",
    "usage": 104857600.0
  }
}
